Verif/Test/Invalide/test_erreur_2.9-8.deca
// Description:
//    Programme soulevant l'erreur (2.9)
// Resultats:
//    Erreur contextuelle
//    Ligne 15 : Identificateurs de même nom dans la classe 'A' (règle 2.9)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 19/01/2012

class A {

   int A;
   void A(int A) {
      println(A);
   }

}


A A = new A();
int A = 42;
{
A.A(A);
}
